--- a/views/how-it-works.ejs
+++ b/views/how-it-works.ejs
@@ -208,7 +208,7 @@
         <i class="fas fa-shield-alt"></i>SAFEHer
       </div>
       <div class="header-buttons">
-        <a href="/dashboard" class="btn btn-outline-primary">Dashboard</a>
+        <a href="/home" class="btn btn-outline-primary">Home</a>
         <a href="/logout" class="btn btn-primary">Logout</a>
       </div>
     </div>
